--- a/pf-user/src/main/resources/application.yml
+++ b/pf-user/src/main/resources/application.yml
@@ -19,5 +19,13 @@ spring:
     host: 47.94.248.38
     timeout: 5000ms
     port: 6379
-gateway:
-  server: localhost:10000
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: update
+    show-sql: false
+message:
+  server: localhost:10003
+recruit:
+  server: localhost:10006
