--- a/pf-recruit/src/main/resources/application.yml
+++ b/pf-recruit/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10006
+  port: 10016
   max-http-header-size: 8192
 spring:
   application:
@@ -8,11 +8,21 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  zipkin:
+    base-url: http://localhost:10001/
+  sleuth:
+    sampler:
+      probability: 1.0
   datasource:
     url: jdbc:mysql://47.94.248.38:3306/personfilter?characterEncoding=utf-8&useSSL=false
     username: root
     password: li197910
     driver-class-name: com.mysql.jdbc.Driver
+    hikari:
+      minimum-idle: 3 # 最小空闲连接数
+      maximum-pool-size: 15 # 最大连接数量
+      pool-name: recruit-pool
+      connection-test-query: SELECT 1 # 测试连接
   jpa:
     hibernate:
       naming:
@@ -23,4 +33,4 @@ logging:
   level:
     com.stalary.pf.recruit.client: DEBUG # feign日志
 user:
-  server: localhost:10005
+  server: localhost:10015
