--- a/pf-outside/pom.xml
+++ b/pf-outside/pom.xml
@@ -36,6 +36,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!-- 邮件服务 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
