--- a/pf-user/src/main/resources/application.yml
+++ b/pf-user/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10005
+  port: 10015
   max-http-header-size: 8192
   user: http://usercenter.stalary.com
   debug: true
@@ -10,11 +10,21 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  zipkin:
+    base-url: http://localhost:10001/
+  sleuth:
+    sampler:
+      probability: 1.0
   datasource:
-    url: jdbc:mysql://47.94.248.38:3306/personfilter?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://47.94.248.38:3306/personfilter?autoReconnect=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: li197910
     driver-class-name: com.mysql.jdbc.Driver
+    hikari:
+      minimum-idle: 3 # 最小空闲连接数
+      maximum-pool-size: 15 # 最大连接数量
+      pool-name: user-pool
+      connection-test-query: SELECT 1 # 测试连接
   redis:
     host: 47.94.248.38
     timeout: 5000ms
@@ -26,6 +36,6 @@ spring:
       ddl-auto: update
     show-sql: false
 message:
-  server: localhost:10003
+  server: localhost:10013
 recruit:
-  server: localhost:10006
+  server: localhost:10016
