--- a/pf-outside/src/main/resources/application.yml
+++ b/pf-outside/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
     host: 47.94.248.38
     timeout: 5000ms
     port: 6379
+    lettuce:
+      pool:
+        max-idle: 10
+        max-active: 10
+        min-idle: 1
   mail:
     # 邮箱服务器地址，这里使用的是163.com的邮件服务器
     host: smtp.163.com
