--- a/pf-user/src/main/resources/application.yml
+++ b/pf-user/src/main/resources/application.yml
@@ -29,6 +29,11 @@ spring:
     host: 47.94.248.38
     timeout: 5000ms
     port: 6379
+    lettuce:
+      pool:
+        max-idle: 10
+        max-active: 10
+        min-idle: 1
   jpa:
     hibernate:
       naming:
