--- a/pf-recruit/pom.xml
+++ b/pf-recruit/pom.xml
@@ -65,6 +65,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <!-- lightmq -->
+        <dependency>
+            <groupId>com.stalary</groupId>
+            <artifactId>lightmqclient</artifactId>
+            <version>1.1-SNAPSHOT</version>
+            <exclusions><!-- 去掉默认配置 -->
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
