--- a/pf-resume/src/main/resources/application.yml
+++ b/pf-resume/src/main/resources/application.yml
@@ -13,6 +13,16 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
+  datasource:
+    url: jdbc:mysql://47.94.248.38:3306/personfilter?autoReconnect=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: li197910
+    driver-class-name: com.mysql.jdbc.Driver
+    hikari:
+      minimum-idle: 1 # 最小空闲连接数
+      maximum-pool-size: 15 # 最大连接数量
+      pool-name: user-pool
+      connection-test-query: SELECT 1 # 测试连接
   data:
     mongodb:
       host: 47.94.248.38
@@ -27,6 +37,8 @@ spring:
         max-idle: 10
         max-active: 10
         min-idle: 1
+  jpa:
+    show-sql: true
 logging:
   level:
     com.stalary.pf.resume.client: DEBUG # feign日志
@@ -34,3 +46,4 @@ user:
   server: localhost:10015
 recruit:
   server: localhost:10016
+debug: true
