--- a/pf-user/src/main/resources/application.yml
+++ b/pf-user/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
   zipkin:
-    base-url: http://localhost:10001/
+    base-url: localhost:10001/
   sleuth:
     sampler:
       probability: 1.0
