--- a/pf-consumer/src/main/resources/application.yml
+++ b/pf-consumer/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       discovery:
         server-addr: localhost:8848
   zipkin:
-    base-url: localhost:10001/
+    base-url: http://localhost:10001/
   sleuth:
     sampler:
       probability: 1.0
