--- a/pf-recruit/src/main/resources/application.yml
+++ b/pf-recruit/src/main/resources/application.yml
@@ -9,26 +9,10 @@ spring:
       discovery:
         server-addr: localhost:8848
   zipkin:
-    base-url: localhost:10001/
+    base-url: http://localhost:10001/
   sleuth:
     sampler:
       probability: 1.0
-  datasource:
-    url: jdbc:mysql://47.94.248.38:3306/personfilter?autoReconnect=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: li197910
-    driver-class-name: com.mysql.jdbc.Driver
-    hikari:
-      minimum-idle: 1 # 最小空闲连接数
-      maximum-pool-size: 15 # 最大连接数量
-      pool-name: recruit-pool
-      connection-test-query: SELECT 1 # 测试连接
-  jpa:
-    hibernate:
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      ddl-auto: update
-    show-sql: false
 logging:
   level:
     com.stalary.pf.recruit.client: DEBUG # feign日志
