--- a/pf-recruit/src/main/resources/bootstrap.yml
+++ b/pf-recruit/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
         file-extension: yml
-  application:
-    name: pf-recruit
+        shared-dataids: mysql.yml
+        refreshable-dataids: mysql.yml
