--- a/pf-resume/src/main/resources/bootstrap.yml
+++ b/pf-resume/src/main/resources/bootstrap.yml
@@ -4,5 +4,5 @@ spring:
       config:
         server-addr: localhost:8848
         file-extension: yml
-        shared-dataids: redis.yml,mongo.yml
+        shared-dataids: redis.yml,mongo.yml,printlog.yml
         refreshable-dataids: redis.yml,mongo.yml
