--- a/pf-gateway/src/main/resources/bootstrap.yml
+++ b/pf-gateway/src/main/resources/bootstrap.yml
@@ -4,5 +4,5 @@ spring:
       config:
         server-addr: localhost:8848
         file-extension: yml
-        shared-dataids: auth.yml
+        shared-dataids: auth.yml,printlog.yml
         refreshable-dataids: auth.yml
