--- a/pf-user/src/main/resources/application.yml
+++ b/pf-user/src/main/resources/application.yml
@@ -9,20 +9,16 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 59.111.95.232:8848
     sentinel:
       transport:
         port: 10003
-        dashboard: localhost:10002
+        dashboard: 59.111.95.232:10002
   zipkin:
-    base-url: http://localhost:10001/
+    base-url: http://59.111.95.232:9411/
   sleuth:
     sampler:
       probability: 1.0
 logging:
   level:
     com.stalary.pf.user.client: DEBUG # feign日志
-message:
-  server: localhost:10013
-recruit:
-  server: localhost:10016
