--- a/pf-gateway/src/main/resources/application.yml
+++ b/pf-gateway/src/main/resources/application.yml
@@ -4,41 +4,11 @@ server:
   max-http-header-size: 8192
 spring:
   cloud:
-    gateway:
-      routes:
-      - id: host_route
-        uri: http://localhost:10011
-        predicates:
-        - Path=/push/**
-      - id: host_route
-        uri: http://localhost:10012
-        predicates:
-        - Path=/outside/**
-      - id: host_route
-        uri: http://localhost:10013
-        predicates:
-        - Path=/message/**
-      - id: host_route
-        uri: http://localhost:10015
-        predicates:
-        - Path=/user/**
-      - id: host_route
-        uri: http://localhost:10016
-        predicates:
-        - Path=/recruit/**
-      - id: host_route
-        uri: http://localhost:10016
-        predicates:
-        - Path=/company/**
-      - id: host_route
-        uri: http://localhost:10017
-        predicates:
-        - Path=/resume/**
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 59.111.95.232:8848
   zipkin:
-    base-url: http://localhost:10001
+    base-url: http://59.111.95.232:9411
   sleuth:
     sampler:
       probability: 1.0
