--- a/pf-gateway/src/main/resources/bootstrap.yml
+++ b/pf-gateway/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: localhost:8848
+        server-addr: 59.111.95.232:8848
         file-extension: yml
-        shared-dataids: auth.yml,printlog.yml
-        refreshable-dataids: auth.yml
+        shared-dataids: auth.yml,printlog.yml,server.yml,gateway.yml
+        refreshable-dataids: auth.yml,server.yml,gateway.yml
