--- a/pf-message/src/main/resources/application.yml
+++ b/pf-message/src/main/resources/application.yml
@@ -7,15 +7,13 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 59.111.95.232:8848
     sentinel:
       transport:
         port: 10003
-        dashboard: localhost:10002
+        dashboard: 59.111.95.232:10002
   zipkin:
-    base-url: http://localhost:10001/
+    base-url: http://59.111.95.232:9411/
   sleuth:
     sampler:
       probability: 1.0
-push:
-  server: localhost:10011
