--- a/pf-outside/pom.xml
+++ b/pf-outside/pom.xml
@@ -6,9 +6,8 @@
         <groupId>com.stalary</groupId>
         <artifactId>pf</artifactId>
         <version>0.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>outside</artifactId>
+    <artifactId>pf-outside</artifactId>
     <version>0.1</version>
     <name>outside</name>
     <description>recruit system outside service</description>
