--- a/pf-user/pom.xml
+++ b/pf-user/pom.xml
@@ -6,9 +6,8 @@
         <groupId>com.stalary</groupId>
         <artifactId>pf</artifactId>
         <version>0.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>user</artifactId>
+    <artifactId>pf-user</artifactId>
     <version>0.1</version>
     <name>user</name>
     <description>recruit system user service</description>
