--- a/pf-user/src/main/resources/application.yml
+++ b/pf-user/src/main/resources/application.yml
@@ -22,3 +22,12 @@ spring:
 logging:
   level:
     com.stalary.pf.user.client: DEBUG # feign日志
+com:
+  stalary:
+    easydoc:
+      path: com.stalary.pf.user
+      contact: stalary@163.com
+      description: pf-user
+      source: false
+      open: true
+      name: pf-user
