--- a/pf-user/pom.xml
+++ b/pf-user/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
             <version>0.2.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.stalary</groupId>
+            <artifactId>easy-doc</artifactId>
+            <version>0.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -91,6 +96,23 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.stalary</groupId>
+                <artifactId>easydoc-maven-plugin</artifactId>
+                <version>0.1.0</version>
+                <!-- -Dpath可以替代 -->
+                <configuration>
+                    <path>com.stalary.pf.user</path>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>save</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
