--- a/pf-recruit/src/main/resources/bootstrap.yml
+++ b/pf-recruit/src/main/resources/bootstrap.yml
@@ -4,5 +4,5 @@ spring:
       config:
         server-addr: 59.111.95.232:8848
         file-extension: yml
-        shared-dataids: mysql.yml,printlog.yml,server.yml
-        refreshable-dataids: mysql.yml,server.yml
+        shared-dataids: mysql.yml,printlog.yml,server.yml,redis.yml
+        refreshable-dataids: mysql.yml,server.yml,redis.yml
