ADD:保存用户信息时，增加向es的写入，为推荐做准备

--- a/pf-gateway/src/main/resources/bootstrap.yml
+++ b/pf-gateway/src/main/resources/bootstrap.yml
@@ -4,5 +4,5 @@ spring:
       config:
         server-addr: 59.111.95.232:8848
         file-extension: yml
-        shared-dataids: auth.yml,printlog.yml,server.yml,gateway.yml
-        refreshable-dataids: auth.yml,server.yml,gateway.yml
+        shared-dataids: auth.yml,printlog.yml,server.yml,gateway-dev.yml
+        refreshable-dataids: auth.yml,server.yml,gateway-dev.yml
