MOD:网关依赖于注册中心使用，更加规范

--- a/pf-gateway/src/main/resources/application.yml
+++ b/pf-gateway/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
     nacos:
       discovery:
         server-addr: 59.111.95.232:8848
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
   zipkin:
     base-url: http://59.111.95.232:9411
   sleuth:
