MOD:所有服务迁移到新服务器中

--- a/pf-consumer/src/main/resources/application.yml
+++ b/pf-consumer/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 59.111.95.232:8848
+        server-addr: nacos.stalary.com
   zipkin:
-    base-url: http://59.111.95.232:9411/
+    base-url: http://zipkin.stalary.com
   sleuth:
     sampler:
       probability: 1.0
