--- a/pf-recruit/src/main/resources/application.yml
+++ b/pf-recruit/src/main/resources/application.yml
@@ -7,13 +7,13 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 59.111.95.232:8848
+        server-addr: nacos.stalary.com
     sentinel:
       transport:
         port: 10003
-        dashboard: 59.111.95.232:10002
+        dashboard: sentinel.stalary.com
   zipkin:
-    base-url: http://59.111.95.232:9411/
+    base-url: http://zipkin.stalary.com
   sleuth:
     sampler:
       probability: 1.0
