--- a/pf-user/src/main/resources/bootstrap.yml
+++ b/pf-user/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 59.111.95.232:8848
+        server-addr: nacos.stalary.com
         file-extension: yml
-        shared-dataids: mysql.yml,redis.yml,printlog.yml,server.yml,es.yml
-        refreshable-dataids: mysql.yml,redis.yml,server.yml,es.yml
+        shared-dataids: mysql.yml,redis.yml,printlog.yml,es.yml
+        refreshable-dataids: mysql.yml,redis.yml,es.yml
